# OCR-Service

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/core/: config.py  logging.py
app/db/: models.py  repository.py  session.py
app/schemas/: documento.py
app/services/: documento_service.py  ocr_service.py  procesamiento_service.py
docs/: documentacion.md  script_creacion_esquema_tabla_bd.sql
